--- a/_config.yml
+++ b/_config.yml
@@ -205,6 +205,8 @@ exclude:
   - _pages/blog.md
   - _pages/projects.md
   - _pages/repositories.md
+  - _pages/profiles.md
+  - _pages/cv.md
   
 keep_files:
   - CNAME
