--- a/_config.yml
+++ b/_config.yml
@@ -207,6 +207,7 @@ exclude:
   - _pages/repositories.md
   - _pages/profiles.md
   - _pages/cv.md
+  - _pages/dropdown.md
   
 keep_files:
   - CNAME
